--- a/src/components/UI/SideMessage/SideMessage.module.css
+++ b/src/components/UI/SideMessage/SideMessage.module.css
@@ -11,11 +11,6 @@
     z-index: 5;
 }
 
-.SideMessage:hover,
-.SideMessage:active {
-    left: -7.25rem;
-}
-
 .Message {
     background: #f4b41a;
     border: 2px solid #143d59;
@@ -51,4 +46,14 @@
     font-weight: normal;
     margin: 0;
     margin-top: 1rem;
+}
+
+.HiddenBackdrop {
+    display: none;
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
